--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,65 @@
+asgiref==3.3.1
+astroid==2.4.2
+attrs==20.3.0
+Automat==20.2.0
+beautifulsoup4==4.9.3
+boto3==1.17.5
+botocore==1.20.5
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+colorama==0.4.4
+comtypes==1.1.8
+constantly==15.1.0
+cryptography==3.4.4
+cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.1.6
 django-heroku==0.3.1
+docopt==0.6.2
 gunicorn==20.0.4
+hyperlink==21.0.0
+idna==2.10
+incremental==17.5.0
+isort==5.7.0
+jmespath==0.10.0
+Js2Py==0.70
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+matplotlib==3.3.4
+mccabe==0.6.1
+numpy==1.20.0
+packaging==20.9
+Pillow==8.1.0
+pipwin==0.5.1
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAudio @ file:///C:/Users/Pratyush%20Harsh/pipwin/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
+pycparser==2.20
+PyHamcrest==2.0.2
+pyjsparser==2.7.1
+pylint==2.6.0
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
+pypiwin32==223
+PyPrind==2.11.2
+pySmartDL==1.3.4
+python-dateutil==2.8.1
+pyttsx3==2.90
+pytz==2021.1
+pywin32==300
+requests==2.25.1
+s3transfer==0.3.4
+service-identity==18.1.0
+six==1.15.0
+soupsieve==2.2
+SpeechRecognition==3.8.1
 sqlparse==0.4.1
+toml==0.10.2
+tzlocal==2.1
 urllib3==1.26.3
+whitenoise==5.2.0
+wikipedia==1.4.0
+wrapt==1.12.1
+zope.interface==5.2.0
